# pyBigKinds

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .stylelintrc  BigKindsParser.py  Makefile  README.md  bigkinds_parser_test.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-release.yaml  build-and-test.yaml  test.yaml
bigkindsparser/: BigKindsParser.py  __init__.py  preprocessing.py  visualization.py
bigkindsparser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jour_da/: inha_analysis.ipynb  waset_data_analysis.ipynb
pyBigKinds/: __init__.py  base.py  preprocessing.py  representation.py  visualization.py
test/: test.xlsx  test_base.py  test_preprocessing.py  test_representation.py  test_visualization.py
