[tool.poetry]
name = "BigKindsParser"
description = "Data Preprocessing Package for BigKinds Data"
authors = ["cjssoote@gmail.com"]

[tool.poetry.dependencies]
black = ">=19.3b0,<=22.12""
isor = ">=5.7""
mypy = ">=0.910"
pre-commit = ">=2.13"
pylint = ">=2.9""
Pandas = ">= 1.5.1"
matplotlib = ">= 3.5.3""
wordcloud = "1.8.2.2""

[tool.black]
line-length = 110
target-version = ['py38']
