[metadata]
name = BigKindsParser
version = 0.1.4
description = Journalism, preprocessing-data.
author = Sorrychoe
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Journalism
    preprocessing-data
    BigKinds
url = https://github.com/sorrychoe/BigKindsParser
project_urls =
    Source Code = https://github.com/sorrychoe/BigKindsParser
    Bug Tracker = https://github.com/sorrychoe/BigKindsParser/issues
[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib>=3.5.3
    pandas==1.5.2
    wordcloud>=1.8.2.2
[options.extras_require]
dev =
    black>=19.3b0,<=22.12
    flake8>=3.9
    isort>=5.7
    pre-commit>=2.13
    pylint>=2.9