[metadata]
name = pyBigKinds
version = 1.0.0
description = BigKinds Data Analysis Toolkit for python
author = Sorrychoe
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Journalism
    preprocessing-data
    BigKinds
url = https://github.com/sorrychoe/pyBigKinds
project_urls =
    Source Code = https://github.com/sorrychoe/pyBigKinds
    Bug Tracker = https://github.com/sorrychoe/pyBigKinds/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib>=3.5.3
    pandas<2
    wordcloud>=1.8.2.2
    scikit-learn>=1.0.0
    openpyxl>=3.1.2

[options.extras_require]
dev =
    flake8>=3.9
    isort>=5.7
    pre-commit>=2.13
    pylint>=2.9
    pytest>=7

[flake8]
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9
extend-ignore = E203, W503
ignore = E203,E226,E251,E501,E722,F821,W503,W605
per-file-ignores = __init__.py:F401,F403,F405
exclude =

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_gitignore = True
